update eda conda.yml and rerun

--- a/src/eda/EDA.ipynb
+++ b/src/eda/EDA.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,20 +113,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>101001184</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27.0</td>\n",
+       "      <td>101000642</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>26.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.142857</td>\n",
        "      <td>B17C</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.6000</td>\n",
-       "      <td>0.020000</td>\n",
+       "      <td>1.6857</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>White, Non-Hispanic</td>\n",
        "      <td>Female</td>\n",
        "      <td>No</td>\n",
@@ -135,19 +135,19 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>101001184</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28.0</td>\n",
+       "      <td>16.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>27.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.25</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>B18Q</td>\n",
+       "      <td>B17C</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.4286</td>\n",
-       "      <td>0.230769</td>\n",
+       "      <td>2.6000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>White, Non-Hispanic</td>\n",
        "      <td>Female</td>\n",
        "      <td>No</td>\n",
@@ -155,65 +155,65 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>102001082</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>101001184</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>B18Q</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.285714</td>\n",
-       "      <td>0.047619</td>\n",
-       "      <td>B17C</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.8478</td>\n",
-       "      <td>0.090909</td>\n",
+       "      <td>2.4286</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>White, Non-Hispanic</td>\n",
        "      <td>Female</td>\n",
        "      <td>No</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>102002426</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23.0</td>\n",
+       "      <td>101001184</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.111111</td>\n",
-       "      <td>B17C</td>\n",
+       "      <td>B20Q</td>\n",
        "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.9057</td>\n",
-       "      <td>0.236842</td>\n",
-       "      <td>Hispanic</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.1346</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>White, Non-Hispanic</td>\n",
        "      <td>Female</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>102002426</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>101001184</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>31.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.095238</td>\n",
-       "      <td>B19Q</td>\n",
+       "      <td>B21Q</td>\n",
        "      <td>0</td>\n",
-       "      <td>13</td>\n",
+       "      <td>10</td>\n",
        "      <td>3</td>\n",
-       "      <td>2.8833</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Hispanic</td>\n",
+       "      <td>1.9138</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>White, Non-Hispanic</td>\n",
        "      <td>Female</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -222,35 +222,35 @@
       ],
       "text/plain": [
        "   StudentID  Attempted  Full   Age  Dev  Internet  PercentageOfRepeats  \\\n",
-       "0  101001184       16.0     1  27.0    0         0             0.250000   \n",
-       "1  101001184       10.0     0  28.0    1         0             0.000000   \n",
-       "2  102001082       17.0     1  20.0    0         2             0.285714   \n",
-       "3  102002426       14.0     1  23.0    0         2             0.000000   \n",
-       "4  102002426       15.0     1  25.0    0         5             0.000000   \n",
+       "0  101000642        6.0     0  26.0    0         2                 0.00   \n",
+       "1  101001184       16.0     1  27.0    0         0                 0.25   \n",
+       "2  101001184       10.0     0  28.0    1         0                 0.00   \n",
+       "3  101001184        6.0     0  30.0    0         2                 0.00   \n",
+       "4  101001184       12.0     1  31.0    0         0                 0.00   \n",
        "\n",
        "   PercentageOfHistDrop TermCode  MajorChangedFromLast  NumberOfMajors  \\\n",
-       "0              0.000000     B17C                     0               3   \n",
-       "1              0.000000     B18Q                     1               5   \n",
-       "2              0.047619     B17C                     0               4   \n",
-       "3              0.111111     B17C                     1               9   \n",
-       "4              0.095238     B19Q                     0              13   \n",
+       "0              0.142857     B17C                     0               5   \n",
+       "1              0.000000     B17C                     0               3   \n",
+       "2              0.000000     B18Q                     1               5   \n",
+       "3              0.000000     B20Q                     1               7   \n",
+       "4              0.000000     B21Q                     0              10   \n",
        "\n",
        "   NumberOfUniqueMajors  CumGPALast  PercentageOfAbsence            Ethnicity  \\\n",
-       "0                     1      2.6000             0.020000  White, Non-Hispanic   \n",
-       "1                     2      2.4286             0.230769  White, Non-Hispanic   \n",
-       "2                     1      3.8478             0.090909  White, Non-Hispanic   \n",
-       "3                     2      2.9057             0.236842             Hispanic   \n",
-       "4                     3      2.8833             0.000000             Hispanic   \n",
+       "0                     1      1.6857                  0.0  White, Non-Hispanic   \n",
+       "1                     1      2.6000                  0.0  White, Non-Hispanic   \n",
+       "2                     2      2.4286                  0.0  White, Non-Hispanic   \n",
+       "3                     3      2.1346                  0.0  White, Non-Hispanic   \n",
+       "4                     3      1.9138                  0.0  White, Non-Hispanic   \n",
        "\n",
        "   Gender IsHispanic  Target  \n",
        "0  Female         No       0  \n",
        "1  Female         No       0  \n",
-       "2  Female         No       1  \n",
-       "3  Female        Yes       0  \n",
-       "4  Female        Yes       0  "
+       "2  Female         No       0  \n",
+       "3  Female         No       0  \n",
+       "4  Female         No       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,24 +261,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Owner\\Anaconda3\\envs\\ml\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "C:\\Users\\Owner\\AppData\\Local\\Temp\\ipykernel_15336\\746266517.py:1: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
-      "  import pandas_profiling\n",
-      "Summarize dataset:  76%|███████▌  | 19/25 [00:02<00:01,  3.55it/s, Calculate auto correlation]            c:\\Users\\Owner\\Anaconda3\\envs\\ml\\lib\\site-packages\\multimethod\\__init__.py:315: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  return func(*args, **kwargs)\n",
-      "Summarize dataset: 100%|██████████| 127/127 [00:36<00:00,  3.53it/s, Completed]                                        \n",
-      "Generate report structure: 100%|██████████| 1/1 [00:10<00:00, 10.71s/it]\n",
-      "Render HTML: 100%|██████████| 1/1 [00:12<00:00, 12.27s/it]\n",
-      "Export report to file: 100%|██████████| 1/1 [00:00<00:00,  1.78it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5c6ea03d6a5e4ccd878b34a60251e6d2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f907afdf962242968f17149ec32bb203",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd9c45c1e4ee408fbbe956c4087dd740",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d16e5300fa7e43dc8d2f3c3b98b03b4f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -291,7 +331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -305,10 +345,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.12"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
